--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/e4c8555812.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
